--- a/browser/index.html
+++ b/browser/index.html
@@ -15,10 +15,23 @@
              var parser = new DOMParser();
              return parser.parseFromString(xmlstring, "text/xml");}
 
+         function getScNodes(footnotelist){
+             return Array.from(footnotelist).filter(x => x.getElementsByTagName("w:smallCaps").length !== 0);
+         }
+
          function smallcapsText(smallcapsnode){
              var parent = smallcapsnode.parentNode;
              var text = parent.nextSibling;
              return text.textContent;}
+
+         function addFootnotesToDom(fnlist){
+             for (let footnote of fnlist){
+                 let text = footnote.textContent;
+                 let newParagraph = document.createElement('p');
+                 newParagraph.textContent = text;
+                 document.getElementsByTagName("body")[0].appendChild(newParagraph);
+             }
+         }
 
          function handleFiles(fileobj){
              var fileblob = new Blob(fileobj);
@@ -31,12 +44,14 @@
                      footnotes.getData(new zip.TextWriter(), function(text) {
                          //console.log(text);
                          var tree = parsexml(text);
-                         var firstnote = tree.getElementsByTagName("w:footnote")[0];
-                         console.log(firstnote);
+                         var noteslist = tree.getElementsByTagName("w:footnote");
+                         var tenthnote = noteslist[10];
+                         console.log(tenthnote.textContent);
                          var smallcaps = tree.getElementsByTagName("w:smallCaps");
                          console.log(smallcapsText(smallcaps[0]));
-
-
+                         console.log(noteslist.length);
+                         console.log(getScNodes(noteslist).length);
+                         addFootnotesToDom(noteslist);
                      });
                      //console.log(entries[1].filename);
                      //entries[0].getData(new zip.TextWriter(), function(text) {
