regex works a little less badly but now finds everything instead of nothing

--- a/browser/index2.html
+++ b/browser/index2.html
@@ -4,6 +4,7 @@
         <span class="form-label">choose a word file</span>
         <input type="file" accept="application/zip" id="file-input" onchange="handleFiles(this.files)">
         <script type="text/javascript" src="zipjs/zip.js"></script>
+        <script type="text/javascript" src="lodash/lodash.min.js"></script>
         <script type="text/javascript" src="footnotes.js"></script>
     </body>
 </html>
